--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ section p {
 	color: red;
 }
 section h1 {
-	font: 32px 'Open Sans';
+	/*font: 32px 'Open Sans';*/
 	font-weight: bold;
 }
 section p {
